--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "firebase": "^8.8.1",
-    "node-cron": "^3.0.0"
+    "node-cron": "^3.0.0",
+    "nodemailer": "^6.6.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
