--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "NODE_ENV=test jest --coverage --forceExit --detectOpenHandles  --watchAll --maxWorkers=1",
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
@@ -21,6 +21,8 @@
     "nodemailer": "^6.6.3"
   },
   "devDependencies": {
-    "nodemon": "^2.0.12"
+    "jest": "^27.0.6",
+    "nodemon": "^2.0.12",
+    "supertest": "^6.1.6"
   }
 }
