--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "firebase": "^8.8.1",
     "jsonwebtoken": "^8.5.1",
     "node-cron": "^3.0.0",
-    "nodemailer": "^6.6.3"
+    "nodemailer": "^6.6.3",
+    "stripe": "^8.170.0"
   },
   "devDependencies": {
     "jest": "^27.0.6",
