--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "firebase": "^8.8.1",
     "jsonwebtoken": "^8.5.1",
+    "memory-cache": "^0.2.0",
     "node-cron": "^3.0.0",
     "nodemailer": "^6.6.3",
     "stripe": "^8.170.0"
